--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "gh-got": "^7.0.0",
+    "prompt": "^1.0.0",
     "semver": "^5.5.0",
     "semver-diff": "^2.1.0"
   },
